Power supply support

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ hardware/pcb/main_board/main_board-backups/
 hardware/pcb/libraries/
 hardware/pcb/main_board/~*
 hardware/pcb/main_board/fp-info-cache
+*.FCBak
+*.stl
