--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ionic/cli": "^7.2.0",
+    "chart.js": "^4.4.2",
     "cordova-res": "^0.15.4",
     "native-run": "^2.0.1"
   }
