Energy observer implementation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ hardware/pcb/main_board/fp-info-cache
 *.stl
 app/node_modules/
 app/energy-monitoring/android/
+app/energy-monitoring/src/environments/secrets.ts
